--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
         <div class="albums-wrapper" role="list">
             <figure class="album-card" role="listitem">
+                <a class="album-cover" href="#" aria-label="Sunset season portada">
+                    <img src="sunset season.jpg" alt="Portada Sunset season">
+                </a>
+                <figcaption class="album-info">
+                    <div class="album-title">Sunset season</div>
+                    <div class="album-sub">2018</div>
+                    <a class="listen-btn" href="https://open.spotify.com/intl-es/album/2CMlkzFI2oDAy5MbyV7OV5?si=mmmu1OC_Q6iQMID4cMsq8A" target="_blank" rel="noopener">Escuchar</a>
+                </figcaption>
+            </figure>
+            <figure class="album-card" role="listitem">
                 <a class="album-cover" href="#" aria-label="Kid Krow portada">
                     <img src="Kid Krow.jpeg" alt="Portada Kid Krow">
                 </a>
